tdf#121540 crash deleting a form from form navigator

regression from
    commit eec9f6c8b928de38dd9e683f46bfab00f3243048
    Date:   Mon Jun 4 15:01:43 2018 +0200
    loplugin:useuniqueptr in FmEntryDataList

and rename the method to make the it's operation clearer

Change-Id: Ife366f02c3d8907c397345d825ef7d1721d8930c